# salesedge

./: .editorconfig  .env.example  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  masterprompt.md  render.yaml  salesedge.tar.xz  things_to_do.md
backend/: .dockerignore  Dockerfile  Dockerfile.dev  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/app/: config.py  dependencies.py  fetch_real_data.py  main.py
backend/app/api/: registry.py
backend/app/api/middleware/: audit_log.py  auth.py  cache.py  rate_limiter.py  request_id.py
backend/app/api/v1/: admin.py  agents.py  auth.py  competitive.py  dashboard.py  data_provenance.py  deals.py  health.py  prospects.py  retention.py  router.py  search.py  signals.py
backend/app/api/websocket/: data_updates.py  deal_alerts.py  manager.py
backend/app/cache/: manager.py
backend/app/connectors/: __init__.py  base.py  registry.py
backend/app/feature_store/: __init__.py  store.py
backend/app/ingestion/: __init__.py  deduplication.py  normalization.py  pipeline.py  quality_scorer.py  scheduler.py
backend/app/models/: base.py  deal.py  prospect.py  signal.py  user.py
backend/app/schemas/: common.py  competitive.py  dashboard.py  data_sources.py  deals.py  indian_context.py  prospects.py  retention.py  signals.py
backend/app/services/: __init__.py
backend/app/utils/: confidence.py  indian_formats.py  logging.py
backend/tests/: conftest.py
backend/tests/backtesting/: test_historical_replay.py
backend/tests/contract/: test_api_contracts.py  test_external_api_schemas.py
backend/tests/e2e/: test_critical_paths.py
backend/tests/factories/: __init__.py  deal_factory.py  prospect_factory.py  signal_factory.py
backend/tests/integration/: test_agent_orchestration.py  test_api_endpoints.py  test_data_flow.py  test_ingestion_pipeline.py
backend/tests/performance/: locustfile.py
(+271 files in other folders)
